TAB completion support, fix file encoding